--- a/index.html
+++ b/index.html
@@ -50,18 +50,19 @@
               </div>
               <div class="col-lg-12">
                        <div id='mainDiv'>
-                          <table border="1" width="100%">
+                          <table  class="table table-striped table-bordered" width="100%">
 
                             <tr>
-                              <td width="5%">Local Media</td>
-                              <td>
-                               <div id="localVideoDiv">  </div>
-                              </td>
+                              <td width="50%">Local Media</td>
+                              <td>Remote Media</td>
                             </tr>
                               <tr>
-                                  <td>Remote Media</td>
+                                  
                               <td>
-                                <div id="remoteVideoDiv"> </video> </div>
+                                <div id="localVideoDiv">  </div>    
+                              </td>
+                              <td>
+                                <div id="remoteVideoDiv"> </div>
                               </td>
                             </tr>
                             
